# PipeWireController

./: .gitignore  CHANGELOG.md  README.md  pipewire-controller  pipewire-controller.desktop  pyproject.toml
pwctl/: __init__.py  app.py  spa_json.py  style.css
pwctl/backend/: bluetooth.py  chains.py  config.py  graph.py  hrir.py  plugins.py  prefs.py  presets.py  pw.py  routing.py  rules.py  schema.py  stats.py  surround.py  system.py  templates.py  virtual.py
pwctl/ui/: chains_page.py  dashboard.py  devices.py  effects_page.py  graph_page.py  hrir_page.py  monitor_page.py  policy_page.py  settings_pages.py  surround_page.py  tools_page.py  virtual_page.py  volume.py  widgets.py
